got stuck on my second attempt,will go back to viewport units from first attempt

--- a/Proto/keyboard-2nd/index.html
+++ b/Proto/keyboard-2nd/index.html
@@ -8,11 +8,9 @@
     <title>Document</title>
   </head>
   <body>
-    <figure>
-      <svg id="canvas">
-        <rect id="back"></rect>
-      </svg>
-    </figure>
+    <figure></figure>
+
+    <script src="	https://cdnjs.cloudflare.com/ajax/libs/d3/5.0.0/d3.min.js"></script>
     <script src="keyboard.js" defer async></script>
   </body>
 </html>
